app/nginxdemoapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdemoapp
  namespace: nginxdemoapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginxdemoapp
  template:
    metadata:
      labels:
        app: nginxdemoapp
     #annotations:
       #prometheus.io/scrape: "true"
       #prometheus.io/port: "9113"
    spec:
      containers:
      - image: f5devcentral/f5-hello-world
        imagePullPolicy: Always
        name: nginxdemoapp
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
