app/nginxdemoapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxdemoapp-svc
  namespace: nginxdemoapp
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
  selector:
      app: nginxdemoapp
